@@ -8,14 +8,18 @@ GENERAL:
 * trait-PathableName.php | improve function toString() to display alternativeName of VSYS
 * class-LoopbackInterface | introduce function type()
 * class-VirtualRouter | extend function addstaticRouter to create correct XML output
+* panos-xml-issue-detector | add validation/fix for duplicate sec/nat rule names
+
 
 UTILS:
+
 
 BUGFIX:
 - fix for pa_rule-edit 'filter=(rule is.unused.fast)' for PAN-OS version detection if connection is going through Panorama
 - fix for pa_rule-merge if NEGATION of original Rule and RuleToCompare differ
 - fix for different classes are made
 - fix class-NatRule | rewriteSNAT_XML() fix rewrite of IP-Address now value() is used
+
 
 ------------------------------------------------------------------------------------------------------------------------
 
